[project]
name = "pic-cron"
version = "0.1.0"
description = "A Python-based tool that extracts metadata from images to rename and organize them."
authors = [
    {name = "TRJackson998",email = "t.r.jackson998@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
